# prototype-badge

./: .gitignore  LICENSE  README.md
.github/workflows/: deploy-webflasher.yml  zip-firmware.yml
code/cli/prototype-badge-flasher/: Cargo.toml  LICENSE  README.md
code/cli/prototype-badge-flasher/src/: main.rs  serial_tab.rs
code/embedded/: display.py  einkdriver.py  main.py  microfont.py  nt3h.py  prototype-logo.pbm  test-nfc.py
code/embedded/fonts/: victor_B_24.mfnt  victor_B_42.mfnt  victor_B_54.mfnt  victor_B_68.mfnt
code/web-flasher/: flash.html  index.html  package-lock.json  package.json  usb.html  vite.config.ts
code/web-flasher/src/: flash.ts  micropython-webserial.ts  usb.ts
hardware/: fp-lib-table  prototype-badge.kicad_pcb  prototype-badge.kicad_pro  prototype-badge.kicad_sch  sym-lib-table
hardware/footprints/: 2-1734839-2.STEP  NT3H2111W0FHKH.kicad_mod  nfc-coil-2.kicad_mod  nfccoil.kicad_mod
hardware/production/: prototype-badge-centroid.csv  prototype-badge.csv
hardware/symbols/: prototype-badge.kicad_sym
